@@ -6,6 +6,7 @@ music-app (2.2ubuntu2) UNRELEASED; urgency=medium
   [ Victor Thompson ]
   * Remove some deprecated code for the UbuntuShape image property.
   * Update app to use the Ubuntu Components version 1.3 (LP: #1508363)
+  * Add initial page sections to Now Playing view (LP: #1447428)
 
  -- Bartosz Kosiorek <gang65@poczta.onet.pl>  Tue, 08 Sep 2015 10:08:49 +0200
 
